# bazel-scala-proto-example

./: .gitignore  README.md  WORKSPACE
.ijwb/: .bazelproject
src/example/: BUILD.bazel  Example.scala  KillService.scala
src/example/proto/: person.proto
